# tree-sitter-antlers

./: .gitignore  Cargo.toml  KNOWN_LIMITATIONS.md  QUICK_START.md  README.md  SYNTAX_HIGHLIGHTING_FIX.md  binding.gyp  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  test_simple.antlers.html  tree-sitter.json
bindings/c/: tree-sitter-antlers.h  tree-sitter-antlers.pc.in
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
queries/: brackets.scm  highlights.scm  indents.scm  injections.scm  locals.scm  outline.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: array_operations.txt  assignments.txt  closing_tags.txt  comments.txt  conditionals.txt  issue_script_at.txt  literals.txt  mixed.txt  modifiers.txt  operators.txt  php.txt  repro_issue.txt  tags.txt  variables.txt
