[package]
name = "tree-sitter-antlers"
description = "Tree-sitter grammar for Statamic Antlers template language"
version = "1.0.0"
license = "MIT"
readme = "README.md"
keywords = ["tree-sitter", "parser", "antlers", "statamic", "template"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-antlers"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"

include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.24"

[build-dependencies]
cc = "1.0"
